[package]
name = "kvs"
version = "0.1.0"
authors = ["sharp <cppcoffee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
criterion = "0.3.0"
rand = "0.7.0"
tempfile = "3.1.0"
walkdir = "2.2.9"
structopt = "0.2.18"
clap = "2.33.0"
failure = "0.1.5"
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
sled = "0.26.3"
log = "0.4.8"
env_logger = "0.6.2"
